--- a/package.json
+++ b/package.json
@@ -6,19 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.5.0",
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "babel-jest": "^27.0.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "jest": "^27.0.0",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "typescript": "4.6.3"
   }
 }
